security_groups.tf
resource "awx_security_group" "egress-all-all" {
  name = "egress-all-all"

  // Terraform removes the default rule
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ingress-all-ssh" {
  name = "ingress-all-ssh"
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 22
    to_port = 22
    protocol = "tcp"
  }
}

resource "aws_security_group" "ingress-all-2222" {
  name = "ingress-all-2222"
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 2222
    to_port = 2222
    protocol = "tcp"
  }
}

resource "aws_security_group" "ingress-all-http" {
  name = "ingress-all-http"
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 80
    to_port = 80
    protocol = "tcp"
  }
}

resource "aws_security_group" "ingress-all-https" {
  name = "ingress-all-https"
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port = 443
    to_port = 443
    protocol = "tcp"
  }
}

resource "aws_security_group" "ingress-private-db" {
  name = "ingress-private-db"
  ingress {
    cidr_blocks = [
      // TODO: limit to IP of gitea
      "172.31.0.0/16"
    ]
    from_port = 5432
    to_port = 5432
    protocol = "tcp"
  }
}

resource "aws_security_group" "ingress-private-gitea" {
  name = "ingress-private-gitea"
  ingress {
    cidr_blocks = [
      // TODO: limit to IP of proxy
      "172.31.0.0/16"
    ]
    from_port = 3000
    to_port = 3000
    protocol = "tcp"
  }
}
